# flash-accounts

./: .gitignore  LICENSE  MANIFEST.in  PyPIREADME.md  README.md  pyproject.toml
flash_accounts/: __init__.py  apps.py  models.py  serializers.py  services.py  settings.py  tests.py  urls.py  views.py
flash_accounts/migrations/: 0001_initial.py
flash_accounts/templates/accounts/: activate.html
flash_accounts/templates/flash_accounts/: activate.txt  password_reset.html  password_reset.txt
