[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "flash-accounts"
authors = [{ name = "Mateusz Meksuła" }]
license = { text = "MIT" }
description = "DRF lightweight reusable app for account management"
readme = "PyPIREADME.md"
requires-python = ">=3.7"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Framework :: Django",
]

keywords = ["django", "restframework", "djangorestframework", "authentication"]
dynamic = ["version"]

dependencies = [
    "django >= 3.0",
    "djangorestframework >= 3.11.0",
]

[project.urls]
"Homepage" = "https://github.com/MeksulaM/flash-accounts"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "flash_accounts.VERSION" }